# miniserve

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Cask.toml  Containerfile  Containerfile.alpine  Cross.toml  Dockerfile  Dockerfile.alpine  LICENSE  Makefile  README.md  build.rs  index.html  release.toml  rls.toml  rust-toolchain  rustfmt.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: build-release-binaries.yml  build-release.yml  ci.yml  publish.yml  winget-release.yml
data/: style.scss
data/themes/: archlinux.scss  monokai.scss  squirrel.scss  zenburn.scss
packaging/: miniserve@.service
src/: archive.rs  args.rs  auth.rs  config.rs  consts.rs  errors.rs  file_op.rs  file_upload.rs  file_utils.rs  handlers.rs  listing.rs  main.rs  path_utils.rs  pipe.rs  renderer.rs  themes.rs  webdav_fs.rs
src/templates/: index.html
tests/: api.rs  archive.rs  auth.rs  auth_file.rs  bind.rs  cli.rs  config.rs  create_directories.rs  download_folder.rs  encoding.rs  header.rs  navigation.rs  qrcode.rs  raw.rs  readme.rs  rm_files.rs  serve_request.rs  tls.rs  upload_files.rs  webdav.rs
tests/data/: auth1.txt  cert.pem  cert_ec.pem  cert_rsa.pem  generate_tls_certs.sh  key_ec.pem  key_pkcs1.pem  key_pkcs8.pem
tests/fixtures/: mod.rs
tests/utils/: mod.rs
